Thu Apr  9 01:54:19 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: fix jpeg check. Add config for sendmail

	* plug-ins/mail/Makefile.am: use autoconf MAILER

	* plug-ins/script-fu: s/\<err\>/my_err/g for portability

Thu Apr  9 02:53:14 EST 1998 Matthew Wilson <msw@gimp.org>

	* app/app_procs.c: Added a little wrapper when loading files from
	command line that loads the files after gtk_main starts.  This
	fixes the segfault from the tips dialog when you load images on
	the command line.  Cudos to Owen for the fix.

Wed Apr  8 23:47:59 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: add AC_FUNC_ALLOCA for regex

Wed Apr  8 21:12:01 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: redid libjpeg check to make sure old versions
	aren't used. Also #undef PACKAGE and VERSION since some
	jconfig.h's define it

	* updated included regex.[ch] to the one in GNU grep

	* plug-ins/script-fu/interp_regex.c: we don't need to kludge
	around OSF1 anymore, since we use our own regex stuff

Wed Apr  8 17:55:38 EDT 1998 Adrian Likins <adrian@gimp.org>

	*plugins/script-fu/scripts/grid-system.scm
	*plugins/script-fu/scripts/hsv-graph.scm
	*plugins/script-fu/scripts/image-structure.scm
	*plugins/script-fu/scripts/line-nova.scm
	*plugins/script-fu/scripts/text-circle.scm
	*plugins/script-fu/scripts/unsharp-mask.scm:
	*data/palettes/Named_colors:
	        script and palette updates from Shuji Narazaki

Wed Apr  8 00:14:29 PDT 1998 Manish Singh <yosh@gimp.org>

	* Made 0.99.24 release

Wed Apr  8 00:04:31 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/batch.c: fixup for script-fu in batch mode from
	Christian Maegaard <cc@chaos.dk>

	* added pagecurl plug-in

Wed Apr  8 01:40:45 EDT 1998 Matthew Wilson <msw@gimp.org>

	* app/by_color_select.c: Don't destroy tool.

Tue Apr  7 22:36:22 PDT 1998 Manish Singh <yosh@gimp.org>

	* added regex.[ch] to app/ and plug-ins/script-fu/ so we REALLY
	have proper regex functions on all platforms

	* updated gfig plugin
