@@ -1,3 +1,10 @@
+Thu Apr  9 09:28:04 1998  Scott Goehring  <scott@poverty.bloomington.in.us>
+
+	* app/gdisplay.c: fixed updating to not clip display updates to
+	image boundary (so that layer boundaries that hang over will be
+	erased properly when the layer is removed); fixes a long-standing
+	cosmetic bug.
+
 Thu Apr  9 01:54:19 PDT 1998 Manish Singh <yosh@gimp.org>
 
 	* configure.in: fix jpeg check. Add config for sendmail
